# ChangeLog for net-p2p/fedoracoind
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Jan 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  fedoracoind-9999.ebuild:
  Keyword ~amd64 for non-live ebuild.

  01 Jan 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  fedoracoind-9999.ebuild:
  Fix SRC_URI for non-live versions.

  10 Feb 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  fedoracoind-9999.ebuild:
  Rename README to README.md

  10 Feb 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  fedoracoind-9999.ebuild:
  Inherit user.

*fedoracoind-9999 (25 Dec 2013)

  25 Dec 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +fedoracoind-9999.ebuild, +files/fedoracoin.conf, +files/fedoracoin.confd,
  +files/fedoracoin.initd, +files/fedoracoind.logrotate, +metadata.xml:
  Initial import. Based on litecoind ebuild.
