@@ -1,0 +1,1 @@
+DIST fedoracoin-0.60.tgz 3445963 SHA256 1a2f2e26cedc18f1069e0acf648257ec258dc74e58e9332a09ceaeea07ec8574 SHA512 d53eb89c72d069b15c7a063480c0c80294d73e9f38c3b791741bc576273a1a35dc23a5cf514af632ff0c5695f5978a67f604616de6e8ce0da216c86fccd6dea7 WHIRLPOOL f035204a7c6c08a2eccb3102e9ebc7e4277e55b009de9ac25db328e6450d3446dc81b5796004af0359fd92ecbb099ac7dcf5c0c51d8328dbf64dfb7dba68ea6e
