@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*fedoracoind-0.60 (01 Jan 2015)
+
+  01 Jan 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  +fedoracoind-0.60.ebuild:
+  Add non-live ebuild.
+
   01 Jan 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
   fedoracoind-9999.ebuild:
   Keyword ~amd64 for non-live ebuild.
